--- a/profile.html
+++ b/profile.html
@@ -8,16 +8,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>About Me</title>
+  <title>Career Background</title>
 
-  <link rel='shortcut icon' href='images/favicon-image (1).png' type='image/x-icon' />
+  <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-  <a class="navbar-brand" href="https://s522-rgb.github.io">Sakhawat Hossain Rodro</a>
+  <a class="navbar-brand" href="./index.html">Md. Emrul Chowdhury</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></i><span>
@@ -25,16 +25,16 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://s522-rgb.github.io">Home</a>
+        <a class="nav-link" href="./index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://s522-rgb.github.io/rodro/hire_me.html">Hire Me</a>
+        <a class="nav-link" href="competitive-programming-profile.html">Competitive Programming Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://s522-rgb.github.io/rodro/projects.html">My Projects and Works</a>
+        <a class="nav-link" href="problem-setting-profile.html">Problem Setting Profile</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">My Blog</a>
+        <a class="nav-link" href="#">Career Background</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="tools/index.html">Tools</a>
@@ -45,47 +45,57 @@
     </ul>
   </div>
 </nav>
-   
-          </h6>
-        </div>
-    </div>
-    <h4></h4>
+
+
+    <h4>Education</h4>
     <hr>
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3">
-          <img style="margin: 10px" max-width="100%" width="100%" src="/img/IMG_20201231_180911_993.jpg">
+          <img style="margin: 10px" max-width="100%" width="100%" src="images/metro.svg">
         </div> 
         <div class="col-lg-9 col-md-9 col-sm-9">
-          <h4 style="font-size: 18px; font-weight: bold;"></h4>
-          <h5>I am currently reading in Computer Technology at Dhaka Polytechnic Institute, Bangladesh.I'm born in Narsingdi, Bangladesh and I grew up in Mymensingh, Bangladesh.</h5>
-          <h6><i></i></h6>
+          <h4 style="font-size: 18px; font-weight: bold;">B.Sc. (Engg.) in Computer Science & Engineering</h4>
+          <h5><a href="https://www.metrouni.edu.bd" target="_blank">Metropolitan University</a></h5>
+          <h6><i>January 2016 - February 2020</i></h6>
         </div>
     </div>
-    <h4>My Skills</h4>
+    <h4>Skills</h4>
     <hr>  
     <div class="row" style="margin: 0px; padding: 0px">
       <table class="table table-hover"> 
         <tr>
           <td style="font-size: 16px; font-weight: bold;">Languages:</td>
           <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">C</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">C++</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">PHP</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">C#</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Java</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Scala</div>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Python</div>
           </td>
         </tr>
         <tr>
-          <td style="font-size: 16px; font-weight: bold;">Web Languages:</td>
+          <td style="font-size: 16px; font-weight: bold;">Web Technologies:</td>
           <td>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">HTML</div>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">CSS</div>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">Javascript</div>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">JQuery</div>
-                 </td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">Bootstrap</div>
+          </td>
         </tr>
         <tr>
-          <td style="font-size: 16px; font-weight: bold;"></td>
-          <td> </td>
+          <td style="font-size: 16px; font-weight: bold;">Frameworks:</td>
+          <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">Spring</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">Codeigniter</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">.NET Core MVC</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">Angular</div>
+          </td>
         </tr>
         <tr>
-          <td style="font-size: 16px; font-weight: bold;">Database Management:</td>
+          <td style="font-size: 16px; font-weight: bold;">Database:</td>
           <td>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-success btn-sm active">MySQL</div>
             <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-success btn-sm active">SQL Server</div>
@@ -99,11 +109,50 @@
           </td>
         </tr>
       </table>
-      <h4>Hey,I am Sakhawat Hossain Rodro</h4>
+      <h4>Projects</h4>
       <hr>
       <table class="table table-hover">
         <tr>
-          
+          <td><h5 style="font-weight: bold;">Metropolitan University CPC Tool <alert style="font-weight: normal; padding: 5px" class="alert alert-success">Co-author: Mohammed Majharul Isalm Rafat</alert></h5>
+
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Javascript</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Codeigniter</div>
+            <span><i>A web application for Metropolitan University Competitive Programming Community</i><span>
+            <li>Live tracking of programmers progress including current rating, solved problems, performance in tasks.</li>
+            <li>Custom leaderboard based on performances.</li>
+            <li>Assigning tasks by trainer. Task's leaderboard automatically rendered by submission scrapping.</li>
+            <li>Creating teams by coach with live chat system.</li>
+            <li>Creating groups by trainer for training.</li>
+            <li>Registration system for intra contests.</li>
+            <li>Participation history in national contests.</li>
+            <li>Blog for the programmers.</li>
+          </td>
+        </tr>
+        <tr>
+          <td><h5 style="font-weight: bold;">Amar Dokan</h5>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Javascript</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Codeigniter</div>
+            <span><i>An e-commerce site for grocery shop with full features.</i><span>
+          </td>
+        </tr>
+
+        <tr>
+          <td><h5 style="font-weight: bold;">Durjoy</h5>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">PHP</div>
+            <span><i>A web application for University Admission Aid with online
+mock exam system.</i><span>
+          </td>
+        </tr>
+        <tr>
+          <td><h5 style="font-weight: bold;">ProgSchool</h5>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Java</div>
+            <span><i>A desktop application for learning programming with
+community and platform for knowledge sharing.</i><span>
+          </td>
         </tr>
       </table>
     </div>
@@ -111,11 +160,11 @@
 
   <footer class="footer" >
     <div class="container">
-      <a style="float: right; margin-top: 12px; text-decoration: none;" href="mailto:sakhawatniguary@gmail.com" class="btn btn-social-icon btn-email"><span class="fa fa-envelope"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
-      <span class="text-muted"> Ⓒ 2020 Rodro</i><span>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" href="mailto:emrul.chy@gmail.com" class="btn btn-social-icon btn-email"><span class="fa fa-envelope"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://github.com/emrul-chy" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://www.linkedin.com/in/emrul-cse/" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://www.facebook.com/emrul.cse" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
+      <span class="text-muted"> Ⓒ 2020 emrul-chy.github.io | By Md. Emrul Chowdhury</i><span>
     </div>
   </footer>
 
