--- a/daily-azad.html
+++ b/daily-azad.html
@@ -50,7 +50,9 @@ This template is very easy to work without touch to code. Daily Azad Blogger Tem
 <img src="images/FB_IMG_1613971892364.jpg" alt="Project : Daily azad" style="width:240px;height:120px;">
 <h1>Documentary</h1>
 
-<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="320" height="240" type="text/html" src="https://www.youtube.com/embed/OHpG6T6vDxs?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0"></iframe><div style="position: absolute;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 0px;background: #fff;">  </small></div><style>.newst{position:relative;text-align:right;height:420px;width:520px;} #gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
+<iframe width="420" height="315"
+src="https://youtube.com/embed/OHpG6T6vDxs">
+</iframe>
  </div>
 
   <footer class="footer" >
