--- a/hire_me.html
+++ b/hire_me.html
@@ -34,7 +34,7 @@
         <a class="nav-link" href="https://s522-rgb.github.io/rodro/projects.html">My Projects and Works</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">My Blog</a>
+        <a class="nav-link" href="https://www.rodro.site">My Blog</a>
       </li>
       
     </ul>
