--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,12 @@
   <div class="container" style="margin-top: 10px; padding-bottom: 200px;    ">
     <h1>My Projects and Works</h1>
     <h3>Daily azad-A Responsible Blogger Theme</h3>
-    <p>Daily azad is a theme for Blogger (A Google Service).You can make your Websites using this theme.<a href="https://s522-rgb.github.io/rodro/daily-azad.html">About this Project</a></p>
+    <p>Daily azad is a theme for Blogger (A Google Service).You can make your Website using this theme.<a href="https://s522-rgb.github.io/rodro/daily-azad.html">About this Project</a></p>
+
+
+    <h3>NirPata-A Responsible Blogger Theme</h3>
+    <p>NirPata is a theme for Blogger (A Google Service).You can make your community Blog or Forum using this theme.<a href="https://s522-rgb.github.io/rodro/nirpata.html">About this Project</a></p>
+
 
   </div>
 
